// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AAAServers should render RADIUS list correctly and edit row data 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__AAAServers-sc-1m2ni0r-0 ZnKYN"
  >
    <div
      class="ant-collapse ant-collapse-icon-position-end ant-collapse-borderless ant-collapse-ghost"
    >
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            RADIUS Servers (0)
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <div
              class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
            >
              <div
                class="styledComponents__Wrapper-sc-1abm7iv-12 cbnATm"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                  style="display: flex; justify-content: flex-end;"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                      type="button"
                    >
                      <span>
                        Add RADIUS Server
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-pro-table"
                >
                  <div
                    class="ant-pro-card"
                  >
                    <div
                      class="ant-pro-card-body"
                      style="padding-top: 0px;"
                    >
                      <div
                        class="ant-pro-table-list-toolbar"
                      >
                        <div
                          class="ant-pro-table-list-toolbar-container"
                        >
                          <div
                            class="ant-pro-table-list-toolbar-left"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <div
                                    class="ant-pro-table-list-toolbar-setting-item"
                                  >
                                    <svg>
                                      SettingsOutlined.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-pro-table-alert"
                      >
                        <div
                          class="ant-alert ant-alert-info ant-alert-no-icon"
                          data-show="true"
                          role="alert"
                        >
                          <div
                            class="ant-alert-content"
                          >
                            <div
                              class="ant-alert-message"
                            >
                              <div
                                class="ant-pro-table-alert-info"
                              >
                                <div
                                  class="ant-pro-table-alert-info-content"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-right: 32px;"
                                    >
                                      <div
                                        class="ant-space ant-space-horizontal ant-space-align-center"
                                      >
                                        <div
                                          class="ant-space-item"
                                          style="margin-right: 6px;"
                                        >
                                          <span>
                                            1 selected
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space-item"
                                        >
                                          <button
                                            class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__CloseButton-sc-1abm7iv-5 dRUGlG"
                                            title="Clear selection"
                                            type="button"
                                          >
                                            <svg>
                                              CancelCircle.svg
                                            </svg>
                                          </button>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-space ant-space-horizontal ant-space-align-center"
                                      >
                                        <div
                                          class="ant-space-item"
                                          style="margin-right: 0px;"
                                        >
                                          <button
                                            class="styledComponents__ActionButton-sc-1abm7iv-6 fNiKLL"
                                            type="button"
                                          >
                                            Edit
                                          </button>
                                        </div>
                                        <span
                                          class="ant-space-item-split"
                                          style="margin-right: 0px;"
                                        >
                                          <div
                                            class="ant-divider ant-divider-vertical styledComponents__Divider-sc-1abm7iv-13 fsVtFP"
                                            role="separator"
                                          />
                                        </span>
                                        <div
                                          class="ant-space-item"
                                        >
                                          <button
                                            class="styledComponents__ActionButton-sc-1abm7iv-6 fNiKLL"
                                            type="button"
                                          >
                                            Delete
                                          </button>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-table-wrapper"
                      >
                        <div
                          class="ant-spin-nested-loading"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                            >
                              <div
                                class="ant-table-container"
                              >
                                <div
                                  class="ant-table-content"
                                  style="overflow-x: auto; overflow-y: hidden;"
                                >
                                  <table
                                    style="min-width: 100%; table-layout: auto;"
                                  >
                                    <colgroup>
                                      <col
                                        class="ant-table-selection-col"
                                      />
                                      <col />
                                      <col />
                                      <col />
                                      <col />
                                      <col />
                                      <col
                                        style="width: 32px;"
                                      />
                                    </colgroup>
                                    <thead
                                      class="ant-table-thead"
                                    >
                                      <tr>
                                        <th
                                          class="ant-table-cell ant-table-selection-column react-resizable"
                                        >
                                          <div
                                            class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                          />
                                          <div
                                            class="ant-table-selection"
                                          >
                                            <label
                                              class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                                            >
                                              <span
                                                class="ant-checkbox ant-checkbox-checked"
                                              >
                                                <input
                                                  class="ant-checkbox-input"
                                                  type="checkbox"
                                                  value=""
                                                />
                                                <span
                                                  class="ant-checkbox-inner"
                                                />
                                              </span>
                                            </label>
                                          </div>
                                          <div
                                            class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                          />
                                        </th>
                                        <th
                                          class="ant-table-cell react-resizable"
                                        >
                                          <div
                                            class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                          />
                                          Name
                                          <div
                                            class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                          />
                                        </th>
                                        <th
                                          class="ant-table-cell react-resizable"
                                        >
                                          <div
                                            class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                          />
                                          IP Address
                                          <div
                                            class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                          />
                                        </th>
                                        <th
                                          class="ant-table-cell react-resizable"
                                        >
                                          <div
                                            class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                          />
                                          Authentication Port
                                          <div
                                            class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                          />
                                        </th>
                                        <th
                                          class="ant-table-cell react-resizable"
                                        >
                                          <div
                                            class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                          />
                                          Accounting Port
                                          <div
                                            class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                          />
                                        </th>
                                        <th
                                          class="ant-table-cell react-resizable"
                                        >
                                          <div
                                            class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                          />
                                          Shared Secret
                                          <div
                                            class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                          />
                                        </th>
                                        <th
                                          class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                                          style="position: sticky; right: 0px;"
                                        >
                                          <div
                                            class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                          />
                                          <div
                                            class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                          />
                                        </th>
                                      </tr>
                                    </thead>
                                    <tbody
                                      class="ant-table-tbody"
                                    >
                                      <tr
                                        aria-hidden="true"
                                        class="ant-table-measure-row"
                                        style="height: 0px; font-size: 0px;"
                                      >
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                      </tr>
                                      <tr
                                        class="ant-table-row ant-table-row-level-0 ant-table-row-selected"
                                        data-row-key="40aa7da509ee48bb97e423d5f5d41ec0"
                                      >
                                        <td
                                          class="ant-table-cell ant-table-selection-column"
                                        >
                                          <label
                                            class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                                          >
                                            <span
                                              class="ant-checkbox ant-checkbox-checked"
                                            >
                                              <input
                                                class="ant-checkbox-input"
                                                type="checkbox"
                                                value=""
                                              />
                                              <span
                                                class="ant-checkbox-inner"
                                              />
                                            </span>
                                          </label>
                                        </td>
                                        <td
                                          class="ant-table-cell"
                                        >
                                          r0
                                        </td>
                                        <td
                                          class="ant-table-cell"
                                        >
                                          3.3.3.3
                                        </td>
                                        <td
                                          class="ant-table-cell"
                                        >
                                          45
                                        </td>
                                        <td
                                          class="ant-table-cell"
                                        >
                                          45
                                        </td>
                                        <td
                                          class="ant-table-cell"
                                        >
                                          <div>
                                            <span
                                              class="ant-input-affix-wrapper ant-input-affix-wrapper-readonly ant-input-password ant-input-affix-wrapper-borderless"
                                            >
                                              <input
                                                action="click"
                                                class="ant-input ant-input-borderless"
                                                readonly=""
                                                type="password"
                                                value="dg"
                                              />
                                              <span
                                                class="ant-input-suffix"
                                              >
                                                <span
                                                  aria-label="eye-invisible"
                                                  class="anticon anticon-eye-invisible ant-input-password-icon"
                                                  role="img"
                                                  tabindex="-1"
                                                >
                                                  <svg
                                                    aria-hidden="true"
                                                    data-icon="eye-invisible"
                                                    fill="currentColor"
                                                    focusable="false"
                                                    height="1em"
                                                    viewBox="64 64 896 896"
                                                    width="1em"
                                                  >
                                                    <path
                                                      d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                                    />
                                                    <path
                                                      d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                                    />
                                                  </svg>
                                                </span>
                                              </span>
                                            </span>
                                          </div>
                                        </td>
                                        <td
                                          class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                          style="position: sticky; right: 0px;"
                                        />
                                      </tr>
                                    </tbody>
                                  </table>
                                </div>
                              </div>
                            </div>
                            <ul
                              class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-center"
                              unselectable="unselectable"
                            >
                              <li
                                aria-disabled="true"
                                class="ant-pagination-prev ant-pagination-disabled"
                                title="Previous Page"
                              >
                                <button
                                  class="ant-pagination-item-link"
                                  disabled=""
                                  tabindex="-1"
                                  type="button"
                                >
                                  <span
                                    aria-label="left"
                                    class="anticon anticon-left"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="left"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </li>
                              <li
                                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                                tabindex="0"
                                title="1"
                              >
                                <a
                                  rel="nofollow"
                                >
                                  1
                                </a>
                              </li>
                              <li
                                aria-disabled="true"
                                class="ant-pagination-next ant-pagination-disabled"
                                title="Next Page"
                              >
                                <button
                                  class="ant-pagination-item-link"
                                  disabled=""
                                  tabindex="-1"
                                  type="button"
                                >
                                  <span
                                    aria-label="right"
                                    class="anticon anticon-right"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="right"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            TACACS+ Servers (0)
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <div
              class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
            >
              <div
                class="styledComponents__Wrapper-sc-1abm7iv-12 cbnATm"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                  style="display: flex; justify-content: flex-end;"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                      type="button"
                    >
                      <span>
                        Add TACACS+ Server
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-result ant-result-error"
                >
                  <div
                    class="ant-result-icon"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-result-title"
                  >
                    Something went wrong.
                  </div>
                  <div
                    class="ant-result-extra"
                  >
                    [@formatjs/intl] An \`id\` must be provided to format a message. You can either:
1. Configure your build toolchain with [babel-plugin-formatjs](https://formatjs.io/docs/tooling/babel-plugin)
or [@formatjs/ts-transformer](https://formatjs.io/docs/tooling/ts-transformer) OR
2. Configure your \`eslint\` config to include [eslint-plugin-formatjs](https://formatjs.io/docs/tooling/linter#enforce-id)
to autofix this issue
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            Local Users (0)
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <div
              class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
            >
              <div
                class="styledComponents__Wrapper-sc-1abm7iv-12 cbnATm"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                  style="display: flex; justify-content: flex-end;"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                      type="button"
                    >
                      <span>
                        Add Local User
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-result ant-result-error"
                >
                  <div
                    class="ant-result-icon"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-result-title"
                  >
                    Something went wrong.
                  </div>
                  <div
                    class="ant-result-extra"
                  >
                    [@formatjs/intl] An \`id\` must be provided to format a message. You can either:
1. Configure your build toolchain with [babel-plugin-formatjs](https://formatjs.io/docs/tooling/babel-plugin)
or [@formatjs/ts-transformer](https://formatjs.io/docs/tooling/ts-transformer) OR
2. Configure your \`eslint\` config to include [eslint-plugin-formatjs](https://formatjs.io/docs/tooling/linter#enforce-id)
to autofix this issue
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AAAServers should render empty lists and alert message correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__AAAServers-sc-1m2ni0r-0 ZnKYN"
  >
    <div
      class="ant-alert ant-alert-info styledComponents__AlertStyle-sc-1c2evo5-0 lfjPoV"
      data-show="true"
      role="alert"
    >
      <svg
        class="ant-alert-icon"
      >
        InformationSolid.svg
      </svg>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          You must have at least one RADIUS or TACACS+ server set-up in order to enable authorization or accounting
        </div>
      </div>
    </div>
    <div
      class="ant-collapse ant-collapse-icon-position-end ant-collapse-borderless ant-collapse-ghost"
    >
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            RADIUS Servers (0)
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <div
              class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
            >
              <div
                class="styledComponents__Wrapper-sc-1abm7iv-12 cbnATm"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                  style="display: flex; justify-content: flex-end;"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                      type="button"
                    >
                      <span>
                        Add RADIUS Server
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-pro-table"
                >
                  <div
                    class="ant-pro-card"
                  >
                    <div
                      class="ant-pro-card-body"
                      style="padding-top: 0px;"
                    >
                      <div
                        class="ant-pro-table-list-toolbar"
                      >
                        <div
                          class="ant-pro-table-list-toolbar-container"
                        >
                          <div
                            class="ant-pro-table-list-toolbar-left"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <div
                                    class="ant-pro-table-list-toolbar-setting-item"
                                  >
                                    <svg>
                                      SettingsOutlined.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-table-wrapper"
                      >
                        <div
                          class="ant-spin-nested-loading"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="ant-table ant-table-middle ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                            >
                              <div
                                class="ant-table-container"
                              >
                                <div
                                  class="ant-table-content"
                                  style="overflow-x: auto; overflow-y: hidden;"
                                >
                                  <table
                                    style="min-width: 100%; table-layout: auto;"
                                  >
                                    <colgroup>
                                      <col
                                        class="ant-table-selection-col"
                                      />
                                      <col />
                                      <col />
                                      <col />
                                      <col />
                                      <col />
                                      <col
                                        style="width: 32px;"
                                      />
                                    </colgroup>
                                    <thead
                                      class="ant-table-thead"
                                    >
                                      <tr>
                                        <th
                                          class="ant-table-cell ant-table-selection-column"
                                        >
                                          <div
                                            class="ant-table-selection"
                                          >
                                            <label
                                              class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
                                            >
                                              <span
                                                class="ant-checkbox ant-checkbox-disabled"
                                              >
                                                <input
                                                  class="ant-checkbox-input"
                                                  disabled=""
                                                  type="checkbox"
                                                  value=""
                                                />
                                                <span
                                                  class="ant-checkbox-inner"
                                                />
                                              </span>
                                            </label>
                                          </div>
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Name
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          IP Address
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Authentication Port
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Accounting Port
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Shared Secret
                                        </th>
                                        <th
                                          class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                          style="position: sticky; right: 0px;"
                                        />
                                      </tr>
                                    </thead>
                                    <tbody
                                      class="ant-table-tbody"
                                    >
                                      <tr
                                        aria-hidden="true"
                                        class="ant-table-measure-row"
                                        style="height: 0px; font-size: 0px;"
                                      >
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                      </tr>
                                      <tr
                                        class="ant-table-placeholder"
                                      >
                                        <td
                                          class="ant-table-cell"
                                          colspan="7"
                                        >
                                          <div
                                            class="ant-table-expanded-row-fixed"
                                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                          />
                                        </td>
                                      </tr>
                                    </tbody>
                                  </table>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            TACACS+ Servers (0)
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <div
              class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
            >
              <div
                class="styledComponents__Wrapper-sc-1abm7iv-12 cbnATm"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                  style="display: flex; justify-content: flex-end;"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                      type="button"
                    >
                      <span>
                        Add TACACS+ Server
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-pro-table"
                >
                  <div
                    class="ant-pro-card"
                  >
                    <div
                      class="ant-pro-card-body"
                      style="padding-top: 0px;"
                    >
                      <div
                        class="ant-pro-table-list-toolbar"
                      >
                        <div
                          class="ant-pro-table-list-toolbar-container"
                        >
                          <div
                            class="ant-pro-table-list-toolbar-left"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <div
                                    class="ant-pro-table-list-toolbar-setting-item"
                                  >
                                    <svg>
                                      SettingsOutlined.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-table-wrapper"
                      >
                        <div
                          class="ant-spin-nested-loading"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="ant-table ant-table-middle ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                            >
                              <div
                                class="ant-table-container"
                              >
                                <div
                                  class="ant-table-content"
                                  style="overflow-x: auto; overflow-y: hidden;"
                                >
                                  <table
                                    style="min-width: 100%; table-layout: auto;"
                                  >
                                    <colgroup>
                                      <col
                                        class="ant-table-selection-col"
                                      />
                                      <col />
                                      <col />
                                      <col />
                                      <col />
                                      <col />
                                      <col
                                        style="width: 32px;"
                                      />
                                    </colgroup>
                                    <thead
                                      class="ant-table-thead"
                                    >
                                      <tr>
                                        <th
                                          class="ant-table-cell ant-table-selection-column"
                                        >
                                          <div
                                            class="ant-table-selection"
                                          >
                                            <label
                                              class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
                                            >
                                              <span
                                                class="ant-checkbox ant-checkbox-disabled"
                                              >
                                                <input
                                                  class="ant-checkbox-input"
                                                  disabled=""
                                                  type="checkbox"
                                                  value=""
                                                />
                                                <span
                                                  class="ant-checkbox-inner"
                                                />
                                              </span>
                                            </label>
                                          </div>
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Name
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          IP Address
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Authentication Port
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Shared Secret
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Purpose
                                        </th>
                                        <th
                                          class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                          style="position: sticky; right: 0px;"
                                        />
                                      </tr>
                                    </thead>
                                    <tbody
                                      class="ant-table-tbody"
                                    >
                                      <tr
                                        aria-hidden="true"
                                        class="ant-table-measure-row"
                                        style="height: 0px; font-size: 0px;"
                                      >
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                      </tr>
                                      <tr
                                        class="ant-table-placeholder"
                                      >
                                        <td
                                          class="ant-table-cell"
                                          colspan="7"
                                        >
                                          <div
                                            class="ant-table-expanded-row-fixed"
                                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                          />
                                        </td>
                                      </tr>
                                    </tbody>
                                  </table>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            Local Users (0)
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <div
              class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
            >
              <div
                class="styledComponents__Wrapper-sc-1abm7iv-12 cbnATm"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                  style="display: flex; justify-content: flex-end;"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                      type="button"
                    >
                      <span>
                        Add Local User
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="ant-pro-table"
                >
                  <div
                    class="ant-pro-card"
                  >
                    <div
                      class="ant-pro-card-body"
                      style="padding-top: 0px;"
                    >
                      <div
                        class="ant-pro-table-list-toolbar"
                      >
                        <div
                          class="ant-pro-table-list-toolbar-container"
                        >
                          <div
                            class="ant-pro-table-list-toolbar-left"
                          />
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <div
                                    class="ant-pro-table-list-toolbar-setting-item"
                                  >
                                    <svg>
                                      SettingsOutlined.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-table-wrapper"
                      >
                        <div
                          class="ant-spin-nested-loading"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="ant-table ant-table-middle ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                            >
                              <div
                                class="ant-table-container"
                              >
                                <div
                                  class="ant-table-content"
                                  style="overflow-x: auto; overflow-y: hidden;"
                                >
                                  <table
                                    style="min-width: 100%; table-layout: auto;"
                                  >
                                    <colgroup>
                                      <col
                                        class="ant-table-selection-col"
                                      />
                                      <col />
                                      <col />
                                      <col />
                                      <col
                                        style="width: 32px;"
                                      />
                                    </colgroup>
                                    <thead
                                      class="ant-table-thead"
                                    >
                                      <tr>
                                        <th
                                          class="ant-table-cell ant-table-selection-column"
                                        >
                                          <div
                                            class="ant-table-selection"
                                          >
                                            <label
                                              class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
                                            >
                                              <span
                                                class="ant-checkbox ant-checkbox-disabled"
                                              >
                                                <input
                                                  class="ant-checkbox-input"
                                                  disabled=""
                                                  type="checkbox"
                                                  value=""
                                                />
                                                <span
                                                  class="ant-checkbox-inner"
                                                />
                                              </span>
                                            </label>
                                          </div>
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Username
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Password
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                        >
                                          Privilege
                                        </th>
                                        <th
                                          class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                          style="position: sticky; right: 0px;"
                                        />
                                      </tr>
                                    </thead>
                                    <tbody
                                      class="ant-table-tbody"
                                    >
                                      <tr
                                        aria-hidden="true"
                                        class="ant-table-measure-row"
                                        style="height: 0px; font-size: 0px;"
                                      >
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                      </tr>
                                      <tr
                                        class="ant-table-placeholder"
                                      >
                                        <td
                                          class="ant-table-cell"
                                          colspan="5"
                                        >
                                          <div
                                            class="ant-table-expanded-row-fixed"
                                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                          />
                                        </td>
                                      </tr>
                                    </tbody>
                                  </table>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
